Fix alignment issues in the user table

--- a/web/src/Components/ProfileIcon/profile.icon.scss
+++ b/web/src/Components/ProfileIcon/profile.icon.scss
@@ -1,7 +1,7 @@
 .profile-icon {
     border-radius: 100%;
     margin-right: 15px;
-    padding: 0.45rem 0.7rem;
+    padding: 0.40rem 0.8rem;
     font-size: 0.9rem;
 }
 
