--- a/web/src/Components/RoleIcon/role.icon.scss
+++ b/web/src/Components/RoleIcon/role.icon.scss
@@ -3,7 +3,7 @@
 .role-icon {
     border-radius: 100%;
     margin-right: 10px;
-    padding: 0.4rem 0.45rem;
+    padding: 0.30rem 0.5rem;
     font-size: 0.7rem;
 }
 
